# memsec

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
.github/workflows/: ci.yml
benches/: malloc.rs  memcmp.rs  memzero.rs  tests.rs
memsec-test/: Cargo.toml
memsec-test/benches/: malloc.rs  memcmp.rs  memzero.rs
memsec-test/tests/: allocext_linux.rs  malloc.rs  malloc_unix_only.rs  tests.rs
src/: alloc.rs  lib.rs  mlock.rs
src/alloc/: allocext.rs  mod.rs
src/alloc/allocext/: linux.rs  mod.rs
tests/: tests.rs
