[package]
name = "memsec"
version = "0.4.1"
authors = ["quininer kel <quininer@live.com>"]
description = "Rust implementation `libsodium/utils`."
repository = "https://github.com/quininer/memsec"
keywords = [ "protection", "memory", "secure" ]
documentation = "https://docs.rs/memsec/"
license = "MIT"
categories = [ "no-std", "memory-management" ]
build = "build.rs"

[badges]
travis-ci = { repository = "quininer/memsec" }
appveyor = { repository = "quininer/memsec" }

[dependencies]
rand = { version = "0.4", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "memoryapi", "sysinfoapi" ], optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach_o_sys = { version = "0.1", optional = true }

[features]
default = [ "alloc" ]
nightly = []
use_os = [ "libc", "winapi", "mach_o_sys" ]
alloc = [ "use_os", "rand" ]
