[package]
name = "memsec"
version = "0.6.3"
authors = ["quininer kel <quininer@live.com>"]
description = "Rust implementation `libsodium/utils`."
repository = "https://github.com/quininer/memsec"
keywords = ["protection", "memory", "secure"]
documentation = "https://docs.rs/memsec/"
license = "MIT"
categories = ["no-std", "memory-management"]
edition = "2018"

[badges]
travis-ci = { repository = "quininer/memsec" }
appveyor = { repository = "quininer/memsec" }

[dependencies]
getrandom = { version = "0.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45", default-features = false, features = [
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
], optional = true }

[features]
default = ["use_os", "alloc"]
nightly = []
use_os = ["libc", "windows-sys"]
alloc = ["getrandom", "use_os"]
alloc_ext = ["alloc"]
