[package]
name = "memsec-test"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]
publish = false
edition = "2018"

[dependencies.memsec]
path = ".."
default-features = false

[dev-dependencies]
libc = "0.2"
quickcheck = "1"
procspawn = {version = "1.0.1", features = ["test-support"]}

[target."cfg(windows)".dev-dependencies]
# procspawn 1.0.1 is not enabling the Win32_Foundation feature, which causes compilation to fail
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(unix)'.dev-dependencies]
libsodium-sys = { version = "0.2" }
nix = "0.26"
ipc-channel = "0.18.0"
serde = "1.0.203"

[features]
default = [ "alloc", "use_os", "alloc_ext"]
nightly = [ "memsec/nightly" ]
use_os = [ "memsec/use_os" ]
alloc = [ "memsec/alloc" ]
alloc_ext = [ "memsec/alloc_ext", "use_os" ]
